compilers/ID/cool/regression/BASE_semanttest/redef_basic.cl.stderr
./BASE_semanttest/redef_basic.cl:5: Redefinition of basic class Object.
./BASE_semanttest/redef_basic.cl:6: Redefinition of basic class Int.
./BASE_semanttest/redef_basic.cl:7: Redefinition of basic class Bool.
./BASE_semanttest/redef_basic.cl:8: Redefinition of basic class String.
Compilation halted due to static semantic errors.
