compilers/ID/cool/regression/BASE_semanttest/redef_basic.cl
Class Object is 
	copy() : SELF_TYPE is self end;
	isProto() : Bool is false end;
	abort() : Bool is false end;
end;
Class Int is end;
Class Bool is end;
Class String is end;



